--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
