--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
+    "morgan": "^1.10.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
